[gd_scene load_steps=13 format=3 uid="uid://d03bhjnnyepvt"]

[ext_resource type="Texture2D" uid="uid://hlvs1qnixage" path="res://Assets/UI/button_default_inactive.png" id="1"]
[ext_resource type="Texture2D" uid="uid://bhhglwkngwtfl" path="res://Assets/UI/button_default_pressed.png" id="2"]
[ext_resource type="Texture2D" uid="uid://caj61jfrfikuk" path="res://Assets/UI/button_default_hover.png" id="3"]
[ext_resource type="Texture2D" uid="uid://sb78a4kb11fd" path="res://Assets/UI/button_small_hover.png" id="5"]
[ext_resource type="FontFile" uid="uid://baep36n7gkbpu" path="res://Assets/Fonts/Kenney Mini Square.ttf" id="5_ssul2"]
[ext_resource type="Texture2D" uid="uid://dhn8ao1ar8nmb" path="res://Assets/UI/button_small_inactive.png" id="6"]
[ext_resource type="Script" path="res://Assets/Scripts/Main Menu.gd" id="7"]
[ext_resource type="Texture2D" uid="uid://dy6p51wpct7l8" path="res://Assets/UI/button_small_pressed.png" id="8"]
[ext_resource type="Texture2D" uid="uid://c5bq3xhb31qnn" path="res://Assets/UI/portrait.png" id="9"]
[ext_resource type="Texture2D" uid="uid://d080xym6qs6u" path="res://Assets/UI/dialog_box.png" id="10"]
[ext_resource type="FontFile" uid="uid://be5or0ipenrtn" path="res://Assets/Fonts/Kenney Future Narrow.ttf" id="10_bwcbe"]
[ext_resource type="FontFile" uid="uid://b1st861nsc7ve" path="res://Assets/Fonts/Kenney Future.ttf" id="12_gnhc7"]

[node name="Main Menu" type="Node2D"]
script = ExtResource("7")

[node name="Sprites" type="Node" parent="."]

[node name="ResourcesUsedButton" type="TextureButton" parent="."]
offset_left = 818.0
offset_top = 4.0
offset_right = 889.0
offset_bottom = 32.0
scale = Vector2(2, 2)
size_flags_horizontal = 0
size_flags_vertical = 0
texture_normal = ExtResource("6")
texture_pressed = ExtResource("8")
texture_hover = ExtResource("5")

[node name="Label" type="RichTextLabel" parent="ResourcesUsedButton"]
layout_mode = 0
offset_left = 20.0
offset_top = 8.5
offset_right = 58.0
offset_bottom = 21.5
mouse_filter = 1
theme_override_fonts/normal_font = ExtResource("5_ssul2")
theme_override_font_sizes/normal_font_size = 8
text = "Credits"
scroll_active = false
tab_size = 10

[node name="MarginContainer" type="MarginContainer" parent="."]
offset_left = 20.0
offset_top = 190.0
offset_right = 162.0
offset_bottom = 314.0
scale = Vector2(2, 2)
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="StartButton" type="TextureButton" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("1")
texture_pressed = ExtResource("2")
texture_hover = ExtResource("3")

[node name="Label" type="RichTextLabel" parent="MarginContainer/VBoxContainer/StartButton"]
layout_mode = 0
offset_left = 48.5
offset_top = 2.5
offset_right = 100.5
offset_bottom = 23.5
mouse_filter = 1
theme_override_fonts/normal_font = ExtResource("5_ssul2")
text = "Start"
scroll_active = false
tab_size = 10

[node name="How to Play Button" type="TextureButton" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("1")
texture_pressed = ExtResource("2")
texture_hover = ExtResource("3")

[node name="Label" type="RichTextLabel" parent="MarginContainer/VBoxContainer/How to Play Button"]
layout_mode = 0
offset_left = 24.0
offset_top = 3.0
offset_right = 126.0
offset_bottom = 25.0
mouse_filter = 1
theme_override_fonts/normal_font = ExtResource("5_ssul2")
text = "How to Play"
scroll_active = false
tab_size = 10

[node name="CharacterButton" type="TextureButton" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("1")
texture_pressed = ExtResource("2")
texture_hover = ExtResource("3")

[node name="Label" type="RichTextLabel" parent="MarginContainer/VBoxContainer/CharacterButton"]
layout_mode = 0
offset_left = 27.5
offset_top = 3.0
offset_right = 140.5
offset_bottom = 30.0
mouse_filter = 1
theme_override_fonts/normal_font = ExtResource("5_ssul2")
text = "Character"
scroll_active = false
tab_size = 10

[node name="ExitButton" type="TextureButton" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("1")
texture_pressed = ExtResource("2")
texture_hover = ExtResource("3")

[node name="Label" type="RichTextLabel" parent="MarginContainer/VBoxContainer/ExitButton"]
layout_mode = 0
offset_left = 56.0
offset_top = 2.5
offset_right = 91.0
offset_bottom = 22.5
mouse_filter = 1
theme_override_fonts/normal_font = ExtResource("5_ssul2")
text = "Exit"
scroll_active = false
tab_size = 10

[node name="InfoBoxNode" type="Node" parent="."]

[node name="BoxSprite" type="Sprite2D" parent="InfoBoxNode"]
position = Vector2(814, 352)
scale = Vector2(4, 4)
texture = ExtResource("9")

[node name="Label" type="RichTextLabel" parent="InfoBoxNode"]
offset_left = 716.0
offset_top = 234.0
offset_right = 907.0
offset_bottom = 401.0
mouse_filter = 1
theme_override_fonts/normal_font = ExtResource("10_bwcbe")
theme_override_font_sizes/normal_font_size = 16
text = "Digital Wellbeing is considered to be a person's abaility to maintain physical and mental wellbeing and protect their devices when using technology"
scroll_active = false
tab_size = 10

[node name="ExternalLinkButton" type="TextureButton" parent="InfoBoxNode"]
offset_left = 707.0
offset_top = 414.0
offset_right = 778.0
offset_bottom = 447.0
scale = Vector2(3, 3)
texture_normal = ExtResource("6")
texture_pressed = ExtResource("8")
texture_hover = ExtResource("5")

[node name="Label3" type="RichTextLabel" parent="InfoBoxNode/ExternalLinkButton"]
layout_mode = 0
offset_left = 18.3333
offset_top = 7.00003
offset_right = 156.333
offset_bottom = 77.0
scale = Vector2(0.333, 0.333)
mouse_filter = 1
theme_override_fonts/normal_font = ExtResource("5_ssul2")
theme_override_font_sizes/normal_font_size = 16
text = "       More Information"
scroll_active = false

[node name="TitleLogoNode" type="Node" parent="."]

[node name="Header" type="TextureRect" parent="TitleLogoNode"]
offset_left = 169.0
offset_top = 17.0
offset_right = 809.0
offset_bottom = 113.0
texture = ExtResource("10")
metadata/_edit_group_ = true

[node name="RichTextLabel" type="RichTextLabel" parent="TitleLogoNode/Header"]
layout_mode = 0
offset_left = 59.0
offset_top = 34.0
offset_right = 592.0
offset_bottom = 64.0
theme_override_colors/default_color = Color(0.156863, 0.52549, 0.541176, 1)
theme_override_fonts/normal_font = ExtResource("12_gnhc7")
theme_override_font_sizes/normal_font_size = 24
text = "Digital Wellbeing Serious Game"
scroll_active = false

[connection signal="pressed" from="ResourcesUsedButton" to="." method="_on_ResourcesUsedButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/How to Play Button" to="." method="_on_How_to_Play_Button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/CharacterButton" to="." method="_on_CharacterButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ExitButton" to="." method="_on_ExitButton_pressed"]
[connection signal="pressed" from="InfoBoxNode/ExternalLinkButton" to="." method="_on_external_link_button_pressed"]
